@@ -48,11 +48,14 @@ This release adds a translation of some of the user documentation into Spanish.
       implementations have the attribute.  Fixes 'PyCurlTransport' object has no
       attribute '_remote_is_at_least_1_2' attribute errors.
       (Andrew Bennetts, #220806)
-      
+
     * Fix MemoryError during large fetches over HTTP by limiting the amount of
       data we try to read per ``recv`` call.  The problem was observed with
       Windows and a proxy, but might affect other environments as well.
       (Eric Holmberg, #215426)
+
+    * Handle old merge directives correctly in Merger.from_mergeable.  Stricter
+      get_parent_map requirements exposed a latent bug here.  (Aaron Bentley)
 
     * Issue a warning and ignore passwords declared in authentication.conf when
       used for an ssh scheme (sftp or bzr+ssh).
